The version number is hardcoded into sdparm.c (in a C string);
the rpm spec file: sdparm.spec ; the debian/changelog file;
and the configure.ac file (in the AC_INIT item).

ChangeLog for sdparm-1.09 [20141007] [svn: r253]
  - decode Third Party Copy VPD page
  - Supported block lengths and protection types (sbc4r01) +
    Block device characterics extension VPD pages added
  - fix manufacturer-assigned serial number VPD page length
  - device id VPD: T10 vendor identification designator clean up
  - block device characteristics VPD: add HAW_ZBC (sbc4r01)
  - SAS/SPL disconnect-reconnect mpage: expand
  - SAS protocol specific port mpage: add MAXR field (spl4r01)
  - standard inquiry response (sinq): add LU_CONG
  - change ibm vendor code to lto5 and lto6
  - point svn:externals to rev 614 of sg3_utils
  - upgrade automake to version 1.14.1
  - configure: add --disable-libsgutils so build bypasses that
    library if present
  - win32: some --wscan and compile fixes

ChangeLog for sdparm-1.08 [20130606] [svn: r215]
  - device id VPD: add protocol specific port identifier
  - control extension mpage: add max sense data length
  - power condition mpage: FIDCPC->CCF_IDLE,
    FSBCPC->CCF_STAND, FSTCPC->CCF_STOPP (spc4r34+)
  - caching mpage: add SYNC_PROG field (sbc3r33)
  - block device characteristics VPD page additions sbc3r34
  - extended inquiry vpd page: add max supported sense data
    length
  - protocol-specific port information VPD page for SAS SSP,
    persistent connection (spl3r2), power disable (spl3r3)
  - allow --readonly with --set= and --clear=
  - add placeholder for third party copy VPD page
  - supply more information if a UA occurs
  - add Makefile so scripts/sas_disk_blink installed
  - scripts/scsi_ch_swp: new, uses sdparm and blockdev
  - ./configure options:
    - change --enable-no-linux-bsg to --disable-linuxbsg
    - add --disable-scsistrings to reduce utility size
      with non-libsgutils build