@@ -2,10 +2,11 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.09 [20141007] [svn: r253]
+ChangeLog for sdparm-1.09 [20141031] [svn: r254]
   - decode Third Party Copy VPD page
   - Supported block lengths and protection types (sbc4r01) +
     Block device characterics extension VPD pages added
+  - zoned block device characterics VPD page added (zbc-r01c)
   - fix manufacturer-assigned serial number VPD page length
   - device id VPD: T10 vendor identification designator clean up
   - block device characteristics VPD: add HAW_ZBC (sbc4r01)
@@ -13,7 +14,7 @@ ChangeLog for sdparm-1.09 [20141007] [svn: r253]
   - SAS protocol specific port mpage: add MAXR field (spl4r01)
   - standard inquiry response (sinq): add LU_CONG
   - change ibm vendor code to lto5 and lto6
-  - point svn:externals to rev 614 of sg3_utils
+  - point svn:externals to rev 619 of sg3_utils
   - upgrade automake to version 1.14.1
   - configure: add --disable-libsgutils so build bypasses that
     library if present
